# fp_btree_rl

./: .gitignore  build_fb.sh  pyproject.toml  test.py
fp_btree/: __init__.py  fp_btree.pyi  setup.py
fp_btree/cpp/: bind_main.cpp
fp_btree/cpp/include/: api2py.h  btree.h  fplan.h  sa.h
fp_btree/cpp/src/: api2py.cpp  btree.cpp  btree_main.cpp  fplan.cpp  main.cpp  sa.cpp
models/: ppo_0.pth
models1/: ppo_0.pth  ppo_100.pth  ppo_1000.pth  ppo_1050.pth  ppo_1100.pth  ppo_1150.pth  ppo_1200.pth  ppo_1250.pth  ppo_1300.pth  ppo_1350.pth  ppo_1400.pth  ppo_1450.pth  ppo_150.pth  ppo_1500.pth  ppo_1550.pth  ppo_1600.pth  ppo_1650.pth  ppo_1700.pth  ppo_1750.pth  ppo_1800.pth  ppo_1850.pth  ppo_1900.pth  ppo_1950.pth  ppo_200.pth  ppo_2000.pth  ppo_250.pth  ppo_300.pth  ppo_350.pth  ppo_400.pth  ppo_450.pth  ppo_50.pth  ppo_500.pth  ppo_550.pth  ppo_600.pth  ppo_650.pth  ppo_700.pth  ppo_750.pth  ppo_800.pth  ppo_850.pth  ppo_900.pth  (+2 more)
old_code/: ai_train.py  data_generate.py  model_train.py  new_train.py  train.py
raw_data/: ami33.info  ami49.info  apte.info  hp.info  xerox.info
rl/: ai_ppo.py  ds_ppo.py  model_test.py  ppo_model_0.pth  warp_env.py
train/: ai_train2.py  data_gen.py  eval_test.py
