[project]
name = "fp-btree-drl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1.1",
    "objprint>=0.3.0",
    "pybind11>=2.13.6",
    "scipy>=1.15.2",
    "setuptools>=78.1.0",
    "torch==2.6.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
